# SpriteCompiler

./: .gitignore  CMakeLists.txt  LICENSE  build.sh  run_dos_test.sh
dos/dos_test_app/: Makefile  build.sh  main.cpp
src/: animation_file_writer.cpp  animation_file_writer.h  animation_json_parser.cpp  animation_json_parser.h  compile_animation_frames.cpp  compile_animation_frames.h  compiled_sprite.cpp  compiled_sprite.h  exception.cpp  exception.h  image_base.h  main.cpp  pixel_source.h  safe_read.h  tga_image.cpp  tga_image.h
tests/: sprite_compiler_tests.cpp
tests/test_data/: porframe.tga
